# level2-dkt-recsys-05

./: .gitignore  Boosting_Models.ipynb  CatBoost.ipynb  Catboost.ipynb  EDA.ipynb  ELO.py  README.md  pyenv.sh  pyproject.toml
EDA/: EDA.ipynb
ML_Models/: Boosting_Models.ipynb  CatBoost.ipynb  CatBoostWandbCallback.py  ELO.py  FE.ipynb  Feature_Engineering.py  LightGBM.ipynb  XGBoost.ipynb  XGBoost_jun.ipynb
base_code/: .bash_history  .bashrc.swp  .gitconfig  .netrc  .viminfo  .wget-hsts
base_code/.conda/: environments.txt
base_code/.vscode-server/: .0ee08df0cf4527e40edc9aa28f4b5bd38bbff2b2.token
base_code/.vscode-server/data/: machineid
base_code/.vscode-server/extensions/: extensions.json
base_code/code/: README.md
base_code/code/SAINT+/: README.md  a.ipynb  config.yaml  main.py  sweep.py  sweep.yaml
base_code/code/SAINT+a/: README.md  config.yaml  main.py  sweep.py
base_code/code/dkt/: README.md  config.yaml  config_sweep.yaml  inference.py  train.py  train_sweep.py
base_code/code/last_query_transformer/: README.md  config.json  config.yaml  data_FE.py  inference.py  sweep.yaml  train.py  transformer.ipynb
base_code/code/lgcn_transformer/: README.md  config.yaml  inference.py  sweep.yaml  train.py
base_code/code/lightgcn/: train.py
base_code/code/sweep_yaml/: base_model.yaml
base_code/code/transformer/: README.md  config.json  inference.py  train.py  transformer.ipynb
base_code/wandb/: settings
custom_model/ngcf/: args.py  datasets.py  example.yaml  logger.py  model.py  train.py
data/: beta_estimate.json  theta_estimate.json
ensemble/: ensemble.py
ensemble/ensembles/: ensembles.py
env/: README.md  pyenv.sh
sqlite/: README.md  client.py  server.py
src/: config.py  dataset.py  example.yaml  main.py
src/models/: _main.py  lightgbm.py  xgboost.py
src/utils/: common.py  wandb.py
(+213 files in other folders)
