[tool.poetry]
name = "level2-dkt-recsys-05"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
wandb = "^0.16.1"
torch = "^2.1.2"
torch-geometric = "^2.4.0"
tqdm = "^4.66.1"
transformers = "^4.36.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
